# stock_predictor

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile.streamlit  README.md  docker-compose.yaml  dockerfile  pyproject.toml
.github/.workflows/: python-ci.yml
.github/workflows/: python-ci.yml
src/stock_predictor/: app.py  data_collector.py  data_collector_news.py  data_collector_prices.py  features.py  logger_config.py  predict.py  train.py  tune.py  utils.py
src/stock_predictor/flows_prefect/: data_gathering_flow.py  feature_flow.py  train_flow.py
src/stock_predictor/frontend/: streamlit.py
src/stock_predictor/models/: base.py  lgbm.py  linear.py
src/stock_predictor/notebooks/: EDA.ipynb
tests/: test_data_collector.py  test_data_collector_news.py  test_data_collector_prices.py  test_features.py  test_models.py  test_predict.py  test_train.py  test_tune.py  test_utils.py
