[project]
name = "stock-predictor"
version = "0.1.0"
description = ""
authors = [
    {name = "acabellom",email = "acabellom01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <3.15"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "streamlit (>=1.52.2,<2.0.0)",
    "boto3 (>=1.42.19,<2.0.0)",
    "transformers (>=5.3.0,<6.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "prefect (>=3.6.22,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "mlflow (>=3.10.1,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "optuna (>=4.8.0,<5.0.0)",
    "fastapi (>=0.135.2,<0.136.0)",
    "pandas-market-calendars (>=5.3.1.2,<6.0.0.0)"
]

[tool.poetry]
packages = [{include = "stock_predictor", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]
